--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,12 @@ h5 {
 .btn {
     background-color: rgb(32, 32, 120);
 }
+h4 {
+    color: rgb(175, 223, 201);
+}
+.nav-link{
+    color: white;
+}
+#aboutus {
+    color: white;
+}
